test/Runner/errors/tests/Seed/Test.seedconf4.js
seed('Seed',"123", { timeout: 500 });
